@@ -20,7 +20,6 @@ to display. The available types are:</p>
   <li>Candlestick</li>
   <li>Point and Figure</li>
   <li>Swing</li>
-  <li>Exhaustion Points</li>
 </ul>
 <p></p>
 <h3>Bar Chart</h3>
@@ -66,27 +65,6 @@ you to overlay indicators.</p>
 <p>
 <img src="swing.png" title="" alt=""
  style="width: 722px; height: 604px;">
-</p>
-
-<h3>Exhaustion Points</h3>
-<p><b>NOTE:</b> This chart type is experimental.
-See <a href="exhaustion.html">more explanation</a>.
-</p>
-<p>
-"Outside Bars" (yellow-to-red) - the trading range encompasses the previous bar.
-"Inside Bars" (pink-to-blue) - the trading range is encompassed by the previous bar.
-</p>
-<p>
-May indicate short-term reversal.
-Must be accompanied by volume and preceded by a trend.
-</p>
-<p>
-The outside bar at 20030313 is a classic. It is even more strong as it
-encompasses both previous bars and has a large body.
-</p>
-<p>
-<img src="exhaustion.png" title="Exhaustion Points" alt="Exhaustion Points"
-     width="713" height="759">
 </p>
 
 </body>
