@@ -77,6 +77,7 @@
   <li><a href="dpo.html">Detrended Price Oscillator - DPO</a></li>
   <li><a href="dmi.html">Directional Movement Index - DMI</a></li>
   <li><a href="env.html">Envelope - ENV</a></li>
+  <li><a href="ep.html">Exhaustion Points - EP</a></li>
   <li><a href="hlc.html">High Low Channel - HLC</a></li>
   <li><a href="ma.html">Moving Average - MA</a></li>
   <li><a href="macd.html">Moving Average Convergence Divergence - MACD</a></li>
@@ -85,6 +86,7 @@
   <li><a href="mom.html">Momentum - MOM</a></li>
   <li><a href="ma2.html">Moving Average 2 Plot - MA2</a></li>
   <li><a href="ma3.html">Moving Average 3 Plot - MA3</a></li>
+  <li><a href="mma.html">Multiple Moving Averages - MMA</a></li>
   <li><a href="nvi.html">Negative Volume Index - NVI</a></li>
   <li><a href="obv.html">On Balance Volume - OBV</a></li>
   <li><a href="oi.html">Open Interest - OI</a></li>
